--- a/src/sass/footer.sass
+++ b/src/sass/footer.sass
@@ -1,19 +1,23 @@
 .footer
   bottom: 0
-  padding-top: 10px
+  padding: 1rem 0
   width: 100%
-  height: 70px
+  // height: 70px
   background-color: #111
   text-align: center
   p
-    margin-bottom: 0px
-    color: grey
+    margin-bottom: 0.5rem
+    color: lightgrey
 
 .fa-twitter
+  // padding: 0.5rem 2rem
   color: #4099FF
 
 .fa-facebook
+  // display: inline-block
   color: #3B5998
+  margin-left: 30px
+  margin-right: 30px
 
 .fa-youtube-play
   color: #e52d27
@@ -34,6 +38,8 @@
   color: #007bb6
 
 .fa
+  padding: 0.5rem 0 
+  display: inline-block
   opacity: 0.7
   transition: 1s
   -webkit-transition: 1s
