--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -12,8 +12,8 @@
   > hr
     border-top-color: #d5d5d5
 
-.content-block-height
-  height: 400px
+// .content-block-height
+//   height: 400px
 
 .container .content-block-one
   border-radius: 6px
@@ -71,16 +71,16 @@
   margin-left: 0px
   text-align: center
   color: #555753
-  font-size: 2.5rem
+  font-size: 3rem
   background: #FFF07B
   display: flex
   justify-content: center
   align-items: center
-  padding: .5rem 0
+  padding: 2rem 0
 
   .btn
     margin-left: 2rem
-    font-size: 1.5rem
+    font-size: 3rem
 
 @media(max-width: 768px)
   .objective-section
@@ -100,7 +100,7 @@
   .item
     img
       width: 100%
-      height: 85vh
+      height: 65vh
   .carousel-inner
     .item:nth-child(1) 
       img
@@ -129,5 +129,5 @@
     align-items: center
     h2
       font-family: 'Bad Script', cursive
-      font-size: 10vw
+      font-size: 9vw
       text-shadow: 2px 2px gray
